--- a/package.json
+++ b/package.json
@@ -21,17 +21,22 @@
     "eslint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "@nestjs/bull": "^0.6.3",
     "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^2.2.3",
     "@nestjs/swagger": "^6.3.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/multer": "^1.4.7",
+    "bull": "^4.10.4",
     "cache-manager": "^5.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express-session": "^1.17.3",
@@ -44,6 +49,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bull": "^4.10.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.7",
     "@types/jest": "29.5.0",
