--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "eslint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "@fastify/compress": "^6.4.0",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/bull": "^0.6.3",
     "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/event-emitter": "^1.4.1",
     "@nestjs/mongoose": "^9.2.2",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.4.2",
     "@nestjs/schedule": "^2.2.3",
     "@nestjs/swagger": "^6.3.0",
     "@types/cookie-parser": "^1.4.3",
@@ -36,6 +39,7 @@
     "cache-manager": "^5.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
